final/ejemplo-oauth2/00-web-https.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    app: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - image: bitnami/nginx:1.12
        name: web
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - mountPath: /opt/bitnami/nginx/html
          name: web-path
      volumes:
      - configMap:
          name: web-index
        name: web-path
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: web
  name: web
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: web
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/acme-challenge-type: http01
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
  name: web
spec:
  rules:
  - host: www.carlostaffe.kube.um.edu.ar
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 8080
  tls:
  - hosts:
    - www.carlostaffe.kube.um.edu.ar
    secretName: web-carlostaffe-kube-um-cert
