final/ejemplo-oauth2/20-oauth-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oauth2-proxy-web

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/acme-challenge-type: http01
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod

    
spec:
  rules:
  - host: auth.carlostaffe.kube.um.edu.ar
    http:
      paths:
      - backend:
          serviceName: oauth2-proxy-web
          servicePort: 4180
        path: /oauth2
  tls:
  - hosts:
    - auth.carlostaffe.kube.um.edu.ar
    secretName: oauth-proxy
